# cli_example

./: .gitignore  README.md  pyproject.toml
cli_example/: main.py
